--- a/Inscription_Tarifs.html
+++ b/Inscription_Tarifs.html
@@ -74,7 +74,7 @@
           </div>
         <br>
 
-          <div class="row">
+          <div class="container center-block">
             <div class="table-responsive">
               <table class="table table-bordered">
                 <caption><h4 class="text-center">Permanence pour renseignements et inscriptions</h4></caption>
@@ -190,7 +190,7 @@
 
 
       <!-- Footer -->
-		  <div class="row">
+		  <div class="container">
             <div class="footer">
                 <div class="col-xs-4">
                 </div>
