correction de bug dans la page resultats

--- a/Inscription_Tarifs.html
+++ b/Inscription_Tarifs.html
@@ -21,7 +21,7 @@
 		        		<span class="icon-bar"></span>
 		    		</button>
 
-      				<img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" width="50%" height="50%" href="#">Dojo Beauceron</a>
+      				<img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" width="50%" height="50%" id="title_logo" href="#">Dojo Beauceron</a>
    			 	</div>
 
     			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -190,7 +190,7 @@
 
 
       <!-- Footer -->
-		  <div class="container">
+		  <div class="row">
             <div class="footer">
                 <div class="col-xs-4">
                 </div>
