--- a/resultats.html
+++ b/resultats.html
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" width="50%" height="50%" href="#">Dojo Beauceron</a>
+      <img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,7 +72,7 @@
 
         <div class="col-xs-2 text-center">
 
-        	<form method="post" action="traitement.php">
+        	<form method="post" action="resultats.html">
                 <p>
                     <label for="annee">Année</label><br />
                     <select name="annee" id="annee" title="selecteurs">
@@ -91,10 +91,10 @@
 
         <div class="col-xs-2 text-center">
 
-        	<form method="post" action="traitement.php">
+        	<form method="post" action="resultats.html">
                 <p>
                     <label for="sexe">Catégorie H/F</label><br />
-                    <select name="sexe id="sexe" title="selecteurs">
+                    <select name="sexe" id="sexe" title="selecteurs">
                     <option value="Homme">Homme</option>
                     <option value="Femme">Femme</option>
                     </select>
@@ -105,10 +105,10 @@
 
         <div class="col-xs-2 text-center">
 
-        	<form method="post" action="traitement.php">
+        	<form method="post" action="resultats.html">
                 <p>
                     <label for="annee">Catégorie</label><br />
-                    <select name="annee" id="annee" title="selecteurs">
+                    <select name="annee" class="annee" title="selecteurs">
                     <option value="poussins">Poussins</option>
                     <option value="benjamins">Benjamins</option>
                     <option value="minimes">Minimes</option>
@@ -159,7 +159,7 @@
 						<div class="caption">
 							<p>Le podium</p>
 							<p class="alert alert-info">Un peu de blabla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet est rem repudiandae magni harum nemo numquam adipisci odio nostrum enim hic similique commodi, temporibus labore sapiente voluptas quo.</p>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
 						</div>
 					</div>	
 				</div>
@@ -186,7 +186,7 @@
 						<div class="caption">
 							<p>Le podium</p>
 							<p class="alert alert-info">Un peu de blabla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet est rem repudiandae magni harum nemo numquam adipisci odio nostrum enim hic similique commodi, temporibus labore sapiente voluptas quo.</p>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
 						</div>
 					</div>	
 				</div>
@@ -213,7 +213,7 @@
 						<div class="caption">
 							<p>Le podium</p>
 							<p class="alert alert-info">Un peu de blabla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet est rem repudiandae magni harum nemo numquam adipisci odio nostrum enim hic similique commodi, temporibus labore sapiente voluptas quo.</p>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
 						</div>
 					</div>	
 				</div>
@@ -240,7 +240,7 @@
 						<div class="caption">
 							<p>Le podium</p>
 							<p class="alert alert-info">Un peu de blabla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet est rem repudiandae magni harum nemo numquam adipisci odio nostrum enim hic similique commodi, temporibus labore sapiente voluptas quo.</p>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
 						</div>
 					</div>	
 				</div>
@@ -267,7 +267,7 @@
 						<div class="caption">
 							<p>Le podium</p>
 							<p class="alert alert-info">Un peu de blabla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet est rem repudiandae magni harum nemo numquam adipisci odio nostrum enim hic similique commodi, temporibus labore sapiente voluptas quo.</p>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
 						</div>
 					</div>	
 				</div>
@@ -294,7 +294,7 @@
 						<div class="caption">
 							<p>Le podium</p>
 							<p class="alert alert-info">Un peu de blabla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet est rem repudiandae magni harum nemo numquam adipisci odio nostrum enim hic similique commodi, temporibus labore sapiente voluptas quo.</p>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
 						</div>
 					</div>	
 				</div>
@@ -321,7 +321,7 @@
 						<div class="caption">
 							<p>Le podium</p>
 							<p class="alert alert-info">Un peu de blabla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet est rem repudiandae magni harum nemo numquam adipisci odio nostrum enim hic similique commodi, temporibus labore sapiente voluptas quo.</p>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
 						</div>
 					</div>	
 				</div>
@@ -348,7 +348,7 @@
 						<div class="caption">
 							<p>Le podium</p>
 							<p class="alert alert-info">Un peu de blabla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet est rem repudiandae magni harum nemo numquam adipisci odio nostrum enim hic similique commodi, temporibus labore sapiente voluptas quo.</p>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"> Fermer</span></button>
 						</div>
 					</div>	
 				</div>
