--- a/news3.html
+++ b/news3.html
@@ -95,7 +95,7 @@
                 </form>
                 </div>
 
-                <div class="panel-body">
+                <div class="col-md-3 panel-body">
 
                   <div id="newsmid">
                   <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
@@ -107,22 +107,22 @@
                   <p>Ligne Titre</p>
                   </div>
                   
-                  <div id="newsmid">
+                                    <div id="newsmid">
                   <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
                   <p>Ligne Titre</p>
                   </div>
                   
-                  <div id="newsmid">
+                                    <div id="newsmid">
                   <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
                   <p>Ligne Titre</p>
                   </div>
 
-                  <div id="newsmid">
+                                    <div id="newsmid">
                   <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
                   <p>Ligne Titre</p>
                   </div>
 
-                  <div id="newsmid">
+                                    <div id="newsmid">
                  <a href="#"><img class="img-responsive" src="img/news.jpeg"></a>
                   <p>Ligne Titre</p>
                   </div>
