--- a/news.html
+++ b/news.html
@@ -29,13 +29,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav pull-right">
-        <li><a href="#">Accueil<span class="sr-only">(current)</span></a></li>
+        <li><a href="index.html">Accueil<span class="sr-only">(current)</span></a></li>
         <!--<li><a href="#">Link</a></li>-->
         <li class="dropdown">
           <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
-          <a href="#" class="active">Actualités <span class="caret sr-only">(current)</span></a>
+          <a href="#">Actualités <span class="caret sr-only">(current)</span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">News</a></li>
+            <li class="active"><a href="news.html">News</a></li>
             <li><a href="#">Calendrier</a></li>
           </ul>
         </li>
@@ -43,13 +43,13 @@
           <a href="#">Le Club <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Horaires</a></li>
-            <li><a href="#">Inscriptions et Tarifs</a></li>
+            <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
             <li><a href="#">Dojos</a></li>
             <li><a href="#">Historique</a></li>
             <li><a href="#">Documents</a></li>
           </ul>
         </li>
-        <li><a href="#">Résultats</a></li>
+        <li><a href="resultats.html">Résultats</a></li>
         <li><a href="#">Contact</a></li>
         <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
