--- a/Inscription_Tarifs.html
+++ b/Inscription_Tarifs.html
@@ -21,8 +21,8 @@
           <span class="icon-bar"></span>
         </button>
 
-        <img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" href="#">Dojo Beauceron</a>
-      </div>
+        <img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
+      </div><!-- end navbar header -->
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbar">
@@ -59,7 +59,7 @@
 
    </div><!-- /.navbar-collapse -->
 
- </div>
+ </div><!-- end container fluid -->
 </nav>
 
 <div class="row">
@@ -114,7 +114,7 @@
       </tbody>
     </table><!-- end table -->
   </div><br><br><!-- end table responsive -->
-</div><!-- end container -->
+</div><!-- end container center block -->
 
 
 <div class="row">
@@ -126,7 +126,7 @@
 
     <p>Ces inscriptions courant semaine prochaine vous permettront de monter sur le tatamis dès les premiers cours.</p>
 
-  </div>
+  </div><!-- end inscription left -->
 
 
   <div class="col-xs-5 col-xs-offset-1 thumbnail inscr">
@@ -139,35 +139,26 @@
    <p><a href="Documents/Autorisation_test_anti_dopage.pdf" target="_blank"></a></p><br><br>
 
    <p>Etant donné qu’il nous faut un délai pour valider les inscriptions auprès de FFJDA, vous ne pourrez monter sur le Tatamis que 7 jours après la remise du dossier complet.</p>
- </div>
+ </div><!-- end inscription right -->
 </div><!-- end row -->
 
-</div>
 
 
-<br><br><br>
 
 <!-- Footer -->
 <div class="row">
   <div class="footer">
-    <div class="col-xs-4">
-    </div>
-    <div class="col-xs-4">
+    <div class="col-xs-offset-4 col-xs-4">
       <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
     </div>
     <div class="col-xs-4">
       <a href="#">Mentions légales</a>
     </div>
   </div>
-
-</div><!-- /.container-fluid -->
-
-
+</div><!-- end row -->
+    </div><!-- end first div -->
 <script src="js/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
-
-
-
 </html>
