--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="img/photo1.jpg" alt="">
+            <img src="img/carrousel1.jpg" alt="">
         </div>
         <div class="item">
-            <img src="img/photo2.jpg" alt="">
+            <img src="img/carrousel2.jpg" alt="">
         </div>
         <div class="item">
-            <img src="img/photo3.jpg" alt="">
+            <img src="img/carrousel3.jpg" alt="">
         </div>
 
     </div>
