correction de la structure html dans la page news

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/nivo-slider.css">
 </head>
-<div>
+<body>
 
 <!-- navigation -->
 
@@ -41,7 +41,7 @@
                     <a href="#">Le Club <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Horaires</a></li>
-                        <li><a href="Incription_Tarifs.html">Inscriptions et Tarifs</a></li>
+                        <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
                         <li><a href="#">Dojos</a></li>
                         <li><a href="#">Historique</a></li>
                         <li><a href="#">Documents</a></li>
@@ -61,7 +61,7 @@
 </nav>
 
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-pause="null">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -220,7 +220,7 @@
             </div>
 
 
-</div>
+
 
 <script src="js/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
