correction du active dans la page inscription

--- a/Inscription_Tarifs.html
+++ b/Inscription_Tarifs.html
@@ -40,13 +40,13 @@
                         <a href="#">Le Club <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Horaires</a></li>
-                            <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
+                            <li class="active"><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
                             <li><a href="#">Dojos</a></li>
                             <li><a href="#">Historique</a></li>
                             <li><a href="#">Documents</a></li>
                         </ul>
                     </li>
-                    <li class="active"><a href="resultats.html">Résultats</a></li>
+                    <li><a href="resultats.html">Résultats</a></li>
                     <li><a href="#">Contact</a></li>
                     <form class="navbar-form navbar-left" role="search">
                         <div class="form-group">
