--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+    <div id="liseret"></div>
 </nav>
 
 
@@ -184,21 +185,21 @@
         <div class="col-xs-4">
             <div class="thumbnail text-center">
                 <h2>News</h2>
-                <p class="article">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.</p>
+                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.</p>
             </div>
         </div>
 
         <div class="col-xs-4">
             <div class="thumbnail text-center">
                 <h2>News</h2>
-                <p class="article">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.</p>
+                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.</p>
             </div>
         </div>
 
         <div class="col-xs-4">
             <div class="thumbnail text-center">
                 <h2>News</h2>
-                <p class="article">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.
+                <p class="article dot-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolore, qui veniam explicabo, sint inventore tempora iusto similique repellendus porro nulla necessitatibus dignissimos nemo, aperiam facilis. Aperiam voluptatum recusandae ducimus.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde in earum cum reiciendis vero a, autem velit? Sed soluta suscipit quos, quia minima deserunt labore nisi, esse non debitis illo.</p>
             </div>
         </div>
@@ -223,6 +224,7 @@
 
 
 <script src="js/jquery.js"></script>
+<script src="js/jquery.dotdotdot.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/jquery.nivo.slider.pack.js"></script>
 <script src="js/script.js"></script>
