--- a/resultats.html
+++ b/resultats.html
@@ -33,7 +33,7 @@
           <a href="#">Actualités <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="news.html">News</a></li>
-            <li><a href="#">Calendrier</a></li>
+            <li><a href="calendrier.html">Calendrier</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -58,6 +58,7 @@
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+ <div id="liseret"></div>
 </nav>
 
 <div class="container-fluid">
@@ -365,7 +366,7 @@
             <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
             </div>
             <div class="col-xs-4">
-            <a href="#">Mentions légales</a>
+            <a href="mentions.html">Mentions légales</a>
             </div>
         </div>
     </div>
