--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
                 </div>
                 <div class="col-xs-4">
-                <a href="#">Mentions légales</a>
+                <a href="mentions.html">Mentions légales</a>
                 </div>
             </div>
 
