--- a/documents.html
+++ b/documents.html
@@ -58,18 +58,14 @@
 			            </ul>
 			    </div><!-- /.navbar-collapse -->
 			  </div><!-- /.container-fluid -->
-			</nav>
+            <div id="liseret"></div>
+	</nav>
 
 <!--TITRE PAGE-->	
-
 	<div class="container">
-		<div class="row titre_page">
-        	<div class="col-xs-12"><h1>Documents à télécharger</h1></div>
-        </div>
-    </div> <!--/container -->
-<!-- Début Carrousel Documents -->
-    <div class="container">
-                <div class="well">
+        <!-- Début Carrousel Documents -->
+            <div class="well">
+                <div class="col-xs-12"><h1>Documents à télécharger</h1></div>
                     <div id="myCarousel" class="carousel slide" data-pause="null">
                      <!-- Carousel items -->
                         <div class="carousel-inner">
