--- a/horaires.html
+++ b/horaires.html
@@ -40,7 +40,7 @@
 			                <li class="dropdown">
 			                    <a href="#">Le Club <span class="caret"></span></a>
 			                    <ul class="dropdown-menu">
-			                        <li class="active"><a href="#">Horaires</a></li>
+			                        <li class="active"><a href="horaires.html">Horaires</a></li>
 			                        <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
 			                        <li><a href="#">Dojos</a></li>
 			                        <li><a href="#">Historique</a></li>
@@ -72,23 +72,102 @@
 			<table class ="table table-bordered">
 				<thead>
 					<tr>
-						<th class="col1"></th>
+						<th class="col1H"></th>
 						<th colspan = 2>Dojo de Mainvilliers</th>
 						<th colspan = 2>Dojo de la Madeleine</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td class="col1"></td>
-						<td class="col2">Horaires</td>
-						<td class="col3">Né en ...</td>
-						<td class="col4">Horaires</td>
-						<td class="col5">Né en ...</td>
+						<th class="col1H"></th>
+						<th class="col2H">Horaires</th>
+						<th class="col3H">Né en ...</th>
+						<th class="col4H">Horaires</th>
+						<th class="col5H">Né en ...</th>
 					</tr>
+					<tr>
+						<td rowspan = 3>Lundi</td>
+						<td rowspan = 2>18h15 à 19h30</td>
+						<td rowspan = 2>2002 à 2008</td>
+						<td class="col4H">18h15 à 19h30</td>
+						<td class="col5H">2007 à 2010</td>
+					</tr>
+					<tr>
+						<td class="col4H">19h15 à 20h30</td>
+						<td class="col5H">2002 à 2006</td>
+					</tr>
+					<tr>
+						<td class="col2H">19h30 à 21h00</td>
+						<td class="col3H">2001 et avant - Physique</td>
+						<td class="col4H">20h30 à 22h15</td>
+						<td class="col5H">Taiso</td>
+					</tr>
+					<tr>
+						<td rowspan = 3>Mardi</td>
+						<td class="col2H">17h30 à 18h15</td>
+						<td class="col3H">Baby Judo 2012/2011</td>
+						<td rowspan=3 colspan=2></td>
+					</tr>
+					<tr>
+						<td class="col2H">18h15 à 19h30</td>
+						<td class="col3H">Minimes cadets</td>
+					</tr>
+					<tr>
+						<td class="col2H">19h45 à 21h45</td>
+						<td class="col3H">2001 et avant - Technique</td>
+					</tr>
+					<tr>
+						<td rowspan = 3>Mercredi</td>
+						<td class="col2H">16h00 à 17h00</td>
+						<td class="col3H">2009/2010</td>
+						<td class="col4H">15h00 à 15h45</td>
+						<td class="col5H">Baby Judo 2011/2012</td>
+					</tr>
+					<tr>
+						<td class="col2H">17h00 à 18h00</td>
+						<td class="col3H">2007/2008</td>
+						<td class="col4H">15h45 à 16h45</td>
+						<td class="col5H">2007 à 2010</td>
+					</tr>
+					<tr>
+						<td class="col2H">18h00 à 19h30</td>
+						<td class="col3H">2007/2008</td>
+						<td colspan=2></td>
+					</tr>
+					<tr>
+						<td rowspan = 3>Jeudi</td>
+						<td rowspan = 3 colspan = 2></td>
+						<th colspan = 2>Fontaine-La-Guyon</th>
+					</tr>
+					<tr>
+						<td class="col4H">16h45 à 17h30</td>
+						<td class="col5H">2012, 2011, 2010</td>
+					</tr>
+					<tr>
+						<td class="col4H">17h30 à 18h30</td>
+						<td class="col5H">2009, 2008 et avant</td>
+					</tr>
+					<tr>
+						<td rowspan = 2>Vendredi</td>
+						<td rowspan = 2>20h00 à 21h30</td>
+						<td rowspan = 2>2001 et avant</td>
+						<th colspan = 2>Dojo de la Madeleine</th>
+					</tr>
+					<tr>
+						<td class="col4H">17h30 à 19h00</td>
+						<td class="col5H">Entre 2002 et 2006</td>
+					</tr>
+					<tr>
+						<td rowspan = 2>Samedi</td>
+						<td rowspan = 2>10h00 à 11h30</td>
+						<td rowspan = 2>Cours à thème<br/> Jeunes ou adultes<br/>Sur Réservation</td>
+						<td colspan = 2></td>
+					</tr>
+
 				</tbody>
 			</table>
 			
-		</div><!--/containe center-block -->
+		</div><!--/container center-block -->
 
 		</div><!-- /container-fluid -->
 
