--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <li><a href="#">Contact</a></li>
                 <form class="navbar-form navbar-left" role="search">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input id="search" type="text" class="form-control" placeholder="Search">
                     </div>
-                    <button type="submit" class="btn btn-default">Rechercher</button>
+                    <button type="submit" class="btn btn-primary">Rechercher</button>
                 </form>
             </ul>
     </div><!-- /.navbar-collapse -->
