ajout mentions legales, modification du footer, debug slider documents

--- a/mentions.html
+++ b/mentions.html
@@ -44,8 +44,8 @@
             <li><a href="#">Horaires</a></li>
             <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
             <li><a href="#">Dojos</a></li>
-            <li><a href="#">Historique</a></li>
-            <li><a href="#">Documents</a></li>
+            <li><a href="historique.html">Historique</a></li>
+            <li><a href="documents.html">Documents</a></li>
           </ul>
         </li>
         <li><a href="resultats.html">Résultats</a></li>
@@ -75,15 +75,15 @@
 
         <h3>Avertissement</h3>
 
-        <p>Les informations contenues dans le site http://www.judo-beauceron.com n'ont aucune valeur contractuelle.</p>
+        <p class="legal_text">Les informations contenues dans le site http://www.judo-beauceron.com n'ont aucune valeur contractuelle.</p>
 
         <h3>Droits d'auteur et de reproduction</h3>
 
-        <p>Le site http://www.judo-beauceron.com est soumis à la législation française et internationale sur les droits d'auteur. Tous les droits de reproduction, sur quelque support que ce soit, sont réservés. La reproduction et l'utilisation du contenu de tout ou partie de ce site autres qu'individuelles et privées sont interdites, sauf autorisation expresse et préalable de l'auteur.</p>
+        <p class="legal_text">Le site http://www.judo-beauceron.com est soumis à la législation française et internationale sur les droits d'auteur. Tous les droits de reproduction, sur quelque support que ce soit, sont réservés. La reproduction et l'utilisation du contenu de tout ou partie de ce site autres qu'individuelles et privées sont interdites, sauf autorisation expresse et préalable de l'auteur.</p>
 
         <h3>Directeur de la publication</h3>
 
-        <p>Bla bla bla<br/>
+        <p class="legal_text">Bla bla bla<br/>
         Bla bla Bla<br/>
         Bla bla bla<br/>
         Bla bla bla</p>
@@ -91,7 +91,7 @@
 
         <h3>Hébergement</h3>
 
-        <p>Bla bla bla<br/>
+        <p class="legal_text">Bla bla bla<br/>
         Bla bla bla<br/>
         Bla bla bla<br/>
         Bla bla bla</p>
