--- a/resultats.html
+++ b/resultats.html
@@ -39,11 +39,11 @@
         <li class="dropdown">
           <a href="#">Le Club <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Horaires</a></li>
+            <li><a href="horaires.html">Horaires</a></li>
             <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
             <li><a href="#">Dojos</a></li>
-            <li><a href="#">Historique</a></li>
-            <li><a href="#">Documents</a></li>
+            <li><a href="historique.html">Historique</a></li>
+            <li><a href="documents.html">Documents</a></li>
           </ul>
         </li>
         <li class="active"><a href="resultats.html">Résultats</a></li>
