--- a/index.html
+++ b/index.html
@@ -3,47 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Dojo Beauceron - Accueil</title>
-    <link rel="stylesheet" href="css/vendor/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="css/vendor/nivo_slider/nivo-slider.css">
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <link rel="stylesheet" href="../../css/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/vendor/nivo_slider/nivo-slider.css">
+    <link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
+
+</head>
+<body ng-controller="mainController as mainCtrl">
+
+<!-- navigation -->
+<navigation></navigation>
+<!--contenu -->
+<div ng-view></div>
+<!-- footer -->
+<pied></pied>
+
     <script src="js/vendor/jquery/jquery.js"></script>
     <script src="js/script.js"></script>
     <script type="text/javascript" src="js/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="js/vendor/angular/angular-route.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="js/vendor/dot/jquery.dotdotdot.min.js"></script>
-
     <script src="js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>
     <script src="js/vendor/bootstrap/bootstrap.min.js"></script>
 
-</head>
-<body>
-
-
-<!-- navigation -->
-<navigation></navigation>
-<!-- slide -->
-<slide-accueil></slide-accueil>
-
-
-<!-- discipline -->
-<discipline></discipline>
-
-
-<div class="container">
-    <div class="row" id="news"></div>
-</div>
-
-<!-- news-->
-
-<news-accueil></news-accueil>
-
-
-<pied></pied>
-
-
 </body>
-
 </html>
 
 
