--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <pied></pied>
 
     <script src="js/vendor/jquery/jquery.js"></script>
-    <script src="js/script.js"></script>
     <script type="text/javascript" src="js/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="js/vendor/angular/angular-route.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="js/vendor/dot/jquery.dotdotdot.min.js"></script>
     <script src="js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>
     <script src="js/vendor/bootstrap/bootstrap.min.js"></script>
+    <script scr="js/map.js"></script>
 
 </body>
 </html>
