travail sur les scripts du calendrier

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Dojo Beauceron - Accueil</title>
-    <link rel="stylesheet" href="../../css/vendor/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/vendor/nivo_slider/nivo-slider.css">
-    <link rel="stylesheet" type="text/css" href="../../css/stylesheet.css">
+    <link rel="stylesheet" href="/css/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/vendor/nivo_slider/nivo-slider.css">
+    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
 
 </head>
 <body ng-controller="mainController as mainCtrl">
@@ -25,6 +25,16 @@
     <script src="js/vendor/dot/jquery.dotdotdot.min.js"></script>
     <script src="js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>
     <script src="js/vendor/bootstrap/bootstrap.min.js"></script>
+
+    <!-- SCRIPTS SPECIFIQUES CALENDRIER FULLCALENDAR-->
+    <!-- CSS FULLCALENDAR -->
+    <link rel="stylesheet" type="text/css" href="css/vendor/fullcalendar/fullcalendar.css">
+    <!-- JAVASCRIPT FULLCALENDAR -->
+    <script type="text/javascript" src='js/vendor/fullcalendar/moment.min.js'></script>
+    <script type="text/javascript" src='js/vendor/fullcalendar/jquery.min.js'></script>
+    <script type="text/javascript" src='js/vendor/fullcalendar/fullcalendar.min.js'></script>
+    <script type="text/javascript" src='js/vendor/fullcalendar/fr.js'></script>
+    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-calendar/1.0.0/calendar.min.js'></script>
 
 </body>
 </html>
