--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="/js/vendor/angular/angular-route.min.js"></script>
 
     <script type="text/javascript" src="/js/app.js"></script>
-    
+
     <script src="/js/vendor/dot/jquery.dotdotdot.min.js"></script>
 
     <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>
@@ -32,6 +32,9 @@
     <script src="/js/vendor/bootstrap/bootstrap.min.js"></script>
     <script src="/js/map.js"></script>
     <script src="/js/script.js"></script>
+    <script src="../../js/vendor/bootstrap/bootstrap-notify.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
 
 </body>
 </html>
