--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Dojo Beauceron - Accueil</title>
     <link rel="stylesheet" href="/css/vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/css/vendor/nivo_slider/nivo-slider.css">
+    <!-- CSS FULLCALENDAR -->
+    <link rel="stylesheet" type="text/css" href="/css/vendor/fullcalendar/fullcalendar.css">
+    <!-- Feuille style horaires -->
+    <link rel="stylesheet" href="/css/vendor/timetable/timetablejs.css">
     <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
 
 </head>
@@ -33,14 +37,13 @@
     <script src="/js/map.js"></script>
     <script src="/js/script.js"></script>
 
-    <!-- SCRIPTS SPECIFIQUES CALENDRIER FULLCALENDAR-->
-    <!-- CSS FULLCALENDAR -->
-    <link rel="stylesheet" type="text/css" href="/css/vendor/fullcalendar/fullcalendar.css">
     <!-- JAVASCRIPT FULLCALENDAR -->
     <script type="text/javascript" src='/js/vendor/fullcalendar/moment.min.js'></script>
     <script type="text/javascript" src='/js/vendor/fullcalendar/fullcalendar.min.js'></script>
     <script type="text/javascript" src='/js/vendor/fullcalendar/fr.js'></script>
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-calendar/1.0.0/calendar.min.js'></script>
+    <!-- JAVASCRIPT TIMETABLE -->
+    <script type="text/javascript" src='/js/vendor/timetable/timetable.js'></script>
 
 </body>
 </html>
