--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
     <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script>
 
     <script src="/js/vendor/bootstrap/bootstrap.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Urk_tC2vFdLjnexrsKLTPhdtJOumE-g"></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Urk_tC2vFdLjnexrsKLTPhdtJOumE-g"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
-    <script src="/js/map.js"></script>
+    <!--<script src="/js/map.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/anim.js"></script>
-    <script src="/js/caption.js"></script>
+    <script src="/js/caption.js"></script>-->
     <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
     
-
 
 
     <!-- JAVASCRIPT FULLCALENDAR -->
@@ -52,7 +51,7 @@
     <script type="text/javascript" src='/js/vendor/fullcalendar/fr.js'></script>
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-calendar/1.0.0/calendar.min.js'></script>
     <!-- JAVASCRIPT TIMETABLE -->
-    <script type="text/javascript" src='/js/vendor/timetable/timetable.js'></script>
+   <script type="text/javascript" src='/js/vendor/timetable/timetable.js'></script>
 
 </body>
 </html>
