--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <script type="text/javascript" src="/js/vendor/angular/angular-route.min.js"></script>
 
     <script type="text/javascript" src="/js/app.js"></script>
+    <script src="/js/lazyLoad.js"></script>
+    <script src="/js/anim.js"></script>
 
     <!-- <script src="/js/vendor/dot/jquery.dotdotdot.min.js"></script> -->
     <!-- <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script> -->
@@ -38,7 +40,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
     <!--<script src="/js/map.js"></script>
     <script src="/js/script.js"></script>
-    <script src="/js/anim.js"></script>
     <script src="/js/caption.js"></script>-->
     <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
 
