--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="/js/vendor/angular/angular-route.min.js"></script>
 
     <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/lazyLoad.js"></script>
 
     <!-- <script src="/js/vendor/dot/jquery.dotdotdot.min.js"></script> -->
     <!-- <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script> -->
@@ -42,7 +43,7 @@
         <script src="/js/caption.js"></script>-->
         <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
 
-     
+
     <!-- JAVASCRIPT FULLCALENDAR -->
     <script type="text/javascript" src='/js/vendor/fullcalendar/moment.min.js'></script>
     <script type="text/javascript" src='/js/vendor/fullcalendar/fullcalendar.min.js'></script>
