--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <script type="text/javascript" src="/js/vendor/angular/angular-route.min.js"></script>
 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-sanitize.min.js"></script>
+
     <script type="text/javascript" src="/js/app.js"></script>
 
     <!-- <script src="/js/vendor/dot/jquery.dotdotdot.min.js"></script> -->
