--- a/index.html
+++ b/index.html
@@ -1,57 +1,54 @@
 <!DOCTYPE html>
 <html ng-app="dojo">
 <head>
-    <meta charset="UTF-8">
-    <title>Dojo Beauceron - Accueil</title>
-    <link rel="stylesheet" href="/css/vendor/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/vendor/nivo_slider/nivo-slider.css">
-    <!-- CSS FULLCALENDAR -->
-    <link rel="stylesheet" type="text/css" href="/css/vendor/fullcalendar/fullcalendar.css">
-    <!-- Feuille style horaires -->
-    <link rel="stylesheet" href="/css/vendor/timetable/timetablejs.css">
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+  <meta charset="UTF-8">
+  <title>Dojo Beauceron - Accueil</title>
+  <link rel="stylesheet" href="/css/vendor/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/vendor/nivo_slider/nivo-slider.css">
+  <!-- CSS FULLCALENDAR -->
+  <link rel="stylesheet" type="text/css" href="/css/vendor/fullcalendar/fullcalendar.css">
+  <!-- Feuille style horaires -->
+  <link rel="stylesheet" href="/css/vendor/timetable/timetablejs.css">
+  <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+  <script src="/js/vendor/jquery/jquery.js"></script>
 
+  <script type="text/javascript" src="/js/vendor/angular/angular.js"></script>
+  <script type="text/javascript" src="/js/vendor/angular/angular-route.min.js"></script>
+  <script type="text/javascript" src="/js/lazyLoad.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
+  <script src="/js/anim.js"></script>
+  <script src="/js/lazyLoad.js"></script>
+  <!-- <script src="/js/vendor/dot/jquery.dotdotdot.min.js"></script> -->
+  <!-- <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script> -->
+
+  <script src="/js/vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Urk_tC2vFdLjnexrsKLTPhdtJOumE-g"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
+  <!--<script src="/js/map.js"></script>
+  <script src="/js/script.js"></script>-->
+  <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
+
+
+  <!-- JAVASCRIPT FULLCALENDAR -->
+  <script type="text/javascript" src='/js/vendor/fullcalendar/moment.min.js'></script>
+  <script type="text/javascript" src='/js/vendor/fullcalendar/fullcalendar.min.js'></script>
+  <script type="text/javascript" src='/js/vendor/fullcalendar/fr.js'></script>
+  <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-calendar/1.0.0/calendar.min.js'></script>
+
+  <!-- JAVASCRIPT TIMETABLE -->
+  <script type="text/javascript" src='/js/vendor/timetable/timetable.js'></script>
 </head>
 <body ng-controller="mainController as mainCtrl">
 
-<!-- navigation -->
-<navigation></navigation>
-<!--contenu -->
-<div ng-view></div>
-<!-- footer -->
-<pied></pied>
-
-    <script src="/js/vendor/jquery/jquery.js"></script>
-
-    <script type="text/javascript" src="/js/vendor/angular/angular.js"></script>
-
-    <script type="text/javascript" src="/js/vendor/angular/angular-route.min.js"></script>
-
-    <script type="text/javascript" src="/js/app.js"></script>
-    <script type="text/javascript" src="/js/lazyLoad.js"></script>
-
-    <!-- <script src="/js/vendor/dot/jquery.dotdotdot.min.js"></script> -->
-    <!-- <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script> -->
-
-        <script src="/js/vendor/bootstrap/bootstrap.min.js"></script>
-        <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Urk_tC2vFdLjnexrsKLTPhdtJOumE-g"></script>-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
-        <!--<script src="/js/map.js"></script>
-        <script src="/js/script.js"></script>
-        <script src="/js/anim.js"></script>
-        <script src="/js/caption.js"></script>-->
-        <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
+  <!-- navigation -->
+  <navigation></navigation>
+  <!--contenu -->
+  <div ng-view></div>
+  <!-- footer -->
+  <pied></pied>
 
 
-    <!-- JAVASCRIPT FULLCALENDAR -->
-    <script type="text/javascript" src='/js/vendor/fullcalendar/moment.min.js'></script>
-    <script type="text/javascript" src='/js/vendor/fullcalendar/fullcalendar.min.js'></script>
-    <script type="text/javascript" src='/js/vendor/fullcalendar/fr.js'></script>
-    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-calendar/1.0.0/calendar.min.js'></script>
-
-    <!-- JAVASCRIPT TIMETABLE -->
-    <script type="text/javascript" src='/js/vendor/timetable/timetable.js'></script>
 
 </body>
 </html>
