--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script type="text/javascript" src='/js/vendor/fullcalendar/fullcalendar.min.js'></script>
     <script type="text/javascript" src='/js/vendor/fullcalendar/fr.js'></script>
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-calendar/1.0.0/calendar.min.js'></script>
-
+    <script src="/js/vendor/timetable/timetable.js"></script>
 
 
 
