--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <!-- <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script> -->
 
     <script src="/js/vendor/bootstrap/bootstrap.min.js"></script>
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Urk_tC2vFdLjnexrsKLTPhdtJOumE-g"></script>-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Urk_tC2vFdLjnexrsKLTPhdtJOumE-g"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
-    <!--<script src="/js/map.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/js/map.js"></script>
+    <!--<script src="/js/script.js"></script>
     <script src="/js/caption.js"></script>-->
     <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
 
