--- a/index.html
+++ b/index.html
@@ -12,26 +12,23 @@
     <link rel="stylesheet" href="/css/vendor/timetable/timetablejs.css">
     <link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
-
-
     <script type="text/javascript" src="/js/vendor/jquery/jquery.js"></script>
-
-
-
-
     <script type="text/javascript" src="/js/vendor/angular/angular.js"></script>
 
     <script type="text/javascript" src="/js/vendor/angular/angular-route.min.js"></script>
 
-    <script type="text/javascript" src="/js/app.js"></script>
-    <script src="/js/lazyLoad.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/lazyLoad.js"></script>
 
+
+  <script src="/js/anim.js"></script>
+
+  <!-- <script src="/js/vendor/dot/jquery.dotdotdot.min.js"></script> -->
+  <!-- <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script> -->
 
     <script src="/js/vendor/bootstrap/bootstrap.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5Urk_tC2vFdLjnexrsKLTPhdtJOumE-g"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
-
-    <script src="/js/anim.js"></script>
 
     <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
 
