resolution de pb

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
 
+   <!-- SANITIZE -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-sanitize.min.js"></script>
 
     <!-- JAVASCRIPT FULLCALENDAR -->
     <script type="text/javascript" src='/js/vendor/fullcalendar/moment.min.js'></script>
