--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <script type="text/javascript" src="/js/vendor/angular/angular.js"></script>
 
     <script type="text/javascript" src="/js/vendor/angular/angular-route.min.js"></script>
-
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/lazyLoad.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/lazyLoad.js"></script>
 
 
   <script src="/js/anim.js"></script>
