--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-sanitize.min.js"></script>
-<!-- <script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script> -->
+<script src="http://juampynr.github.io/angularjs_form/js/modules/promise-tracker.js"></script>
 <!-- <script type="text/javascript" src="js/lazyLoad.js"></script> -->
 <script type="text/javascript" src='js/vendor/fullcalendar/moment.min.js'></script>
 <script type="text/javascript" src='js/vendor/fullcalendar/fullcalendar.min.js'></script>
@@ -47,24 +47,6 @@
 <script type="text/javascript" src="js/app.js"></script>
 
 
-
-
-
-
-<!-- <script src="/js/vendor/dot/jquery.dotdotdot.min.js"></script> -->
-<!-- <script src="/js/vendor/nivo_slider/jquery.nivo.slider.pack.js"></script> -->
-
-
-
-
-
-
-<!-- SANITIZE -->
-
-
-<!-- JAVASCRIPT FULLCALENDAR -->
-
-<!-- JAVASCRIPT TIMETABLE -->
 
 </body>
 </html>
